--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -164,14 +158,4 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-### Example user template template
-### Example user template
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-!/.gitignore
+.idea/
